chore: JAVA21_HOME-Abhängigkeit aus Surefire-Konfiguration entfernt